Add configurable footer and nav tinkering.

--- a/apps/templates/_home/_nav.html
+++ b/apps/templates/_home/_nav.html
@@ -1,6 +1,6 @@
 {% load menu_tags %}
 
-<nav class="uk-navbar-container" style="background:none;">
+<nav class="uk-navbar-container">
     <div class="uk-container">
         <div uk-navbar="mode: click">
             <div class="uk-navbar-left">
