Sign in from modal.

--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -43,6 +43,10 @@ main {
     /* Adjust the opacity as needed */
 }
 
+.uk-alert {
+    z-index: 99;
+}
+
 .content {
     position: relative;
     z-index: 2;
