Clean out unused templates. Standardize all CMS and user related templates.

--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -729,3 +729,14 @@ iframe {
 .unset-min-height {
     min-height: unset !important;
 }
+
+button.google {
+    background-color: #ea4335;
+    color: white;
+}
+
+
+button.github {
+    background-color: #24292e;
+    color: white;
+}
