--- a/apps/templates/_home/_login_modal.html
+++ b/apps/templates/_home/_login_modal.html
@@ -1,45 +1,41 @@
 {% load socialaccount %}
 {% get_providers as socialaccount_providers %}
-
 <!-- Login Modal -->
 <div id="login-modal" uk-modal>
   <div class="uk-modal-dialog custom-modal">
-      <button class="uk-modal-close-default uk-close-large uk-padding-small" type="button" uk-close></button>
-      <!-- Modal Header -->
-      <div class="modal-header">
-          <h2 class="uk-text-x-large uk-text-bold">Log in to Readux</h2>
+    <button class="uk-modal-close-default uk-close-large uk-padding-small" type="button" uk-close>
+    </button>
+    <!-- Modal Header -->
+    <div class="modal-header">
+      <h2 class="uk-text-x-large uk-text-bold">Log in to Readux</h2>
+    </div>
+    <!-- Modal Content -->
+    <div class="sso-text color-black uk-text-medium">Login via one of the following services:</div>
+    <!-- SSO Buttons -->
+    <div class="sso-buttons">
+      <div class="uk-grid uk-child-width-expand@s " uk-grid>
+        {% for provider in socialaccount_providers %}
+          {% if provider.id not in user.socialaccount_list or user.is_anonymous %}
+            <form action="{% provider_login_url provider.id next=request.path process="login" %}" method="post">
+              {% csrf_token %}
+              <button class="uk-button uk-button-default sso-button {{ provider.id }}" type="submit">
+                <span uk-icon="{{ provider.id }}" class="uk-margin-small-right"></span>{{ provider.name }}
+              </button>
+            </form>
+          {% elif provider.id not in user.socialaccount_list and user.is_authenticated %}
+            <form action="{% provider_login_url provider.id next=request.path process="connect" %}" method="post">
+              {% csrf_token %}
+              <button class="uk-button uk-button-default sso-button {{ provider.id }}" type="submit">
+                <span uk-icon="{{ provider.id }}" class="uk-margin-small-right"></span>{{ provider.name }}
+              </button>
+            </form>
+          {% endif %}
+        {% endfor %}
       </div>
-
-      <!-- Modal Content -->
-       <div class="sso-text color-black uk-text-medium">Login via one of the following services:</div>
-
-          <!-- SSO Buttons -->
-          <div class="sso-buttons">
-              <div class="uk-grid uk-child-width-expand@s uk-margin-remove" uk-grid>
-              {% for provider in socialaccount_providers %}
-      {% if provider.id not in user.socialaccount_list or user.is_anonymous %}
-        <form action="{% provider_login_url provider.id next=request.path process="login" %}" title="Sign in with {{ provider.name }}" class="rdx-provider-button {{ provider.id }} uk-text-center@s uk-text-left@m uk-text-large uk-button uk-button-default uk-button-large uk-width-expand" method="POST">
-          {% csrf_token %}
-                  <button class="uk-button uk-button-default sso-button uk-margin-remove-top" type="submit">
-            <span uk-icon="{{ provider.id}}" class="uk-margin-small-right"></span>{{ provider.name }}
-          </button>
-        </form>
-      {% elif provider.id not in user.socialaccount_list and user.is_authenticated %}
-        <form action="{% provider_login_url provider.id next=request.path process="connect" %}" title="Sign in with {{ provider.name }}" class="rdx-provider-button {{ provider.id }} uk-text-center@s uk-text-left@m uk-text-large uk-button uk-button-default uk-button-large uk-width-expand" method="POST">
-          {% csrf_token %}
-                  <button class="uk-button uk-button-default sso-button uk-margin-remove-top" type="submit">
-            <span uk-icon="{{ provider.id}}" class="uk-margin-small-right"></span>{{ provider.name }}
-          </button>
-        </form>
-      {% endif %}
-  {% endfor %}
-              </div>
-          </div>
-
-
-
-          <!-- Help Link -->
-          <div class="uk-text-center uk-margin-top">Need help? <a href="#" class="uk-link text-anchor-blue"> Contact us</a></div>
-      </div>
+    </div>
+    <!-- Help Link -->
+    <div class="uk-text-center uk-margin-top">
+      Need help? <a href="#" class="uk-link text-anchor-blue">Contact us</a>
+    </div>
   </div>
 </div>
