--- a/apps/templates/snippets/_signout_button.html
+++ b/apps/templates/snippets/_signout_button.html
@@ -1,11 +1,6 @@
-<form class="uk-navbar-toggle" action="/accounts/logout/" method="POST">
+<form class="uk-navbar-toggle" action={% url "account_logout" %} method="post">
   {% csrf_token %}
-  <button
-    type="submit"
-    class="menu-item"
-    uk-icon="icon: sign-in;"
-    uk-tooltip="Sign Out"
-  >
+  <button type="submit" class="menu-item" uk-icon="icon: sign-in;" uk-tooltip="Sign Out">
     <span class="sr-only">Login/Sign Up</span>
   </button>
 </form>
