Make some meta tags configurable.

--- a/apps/templates/socialaccount/connections.html
+++ b/apps/templates/socialaccount/connections.html
@@ -2,4 +2,6 @@
 {% load allauth %}
 {% load i18n %}
 
-{% block breadcrumb %}Connections{% endblock %}
+{% block breadcrumb %}
+  Connections
+{% endblock breadcrumb %}
