--- a/apps/templates/_home/_footer.html
+++ b/apps/templates/_home/_footer.html
@@ -1,14 +1,12 @@
 <div class="footer">
   <div class="uk-container">
     {% include FOOTER_CONTENT_TEMPLATE %}
-    <ul
-      class="uk-list uk-list-collapse uk-text-light uk-text-small uk-margin-small"
-    >
-      <li>Readux {{APP_VERSION}}</li>
+    <ul class="uk-list uk-list-collapse uk-text-light uk-text-small uk-margin-small">
+      <li>Readux {{ APP_VERSION }}</li>
       {% if DJANGO_ENV != 'production' %}
-      <li>Branch: {{BRANCH}}</li>
-      <li>Commit: {{COMMIT}}</li>
-      <li>Commit Date: {{COMMIT_DATE}}</li>
+        <li>Branch: {{ BRANCH }}</li>
+        <li>Commit: {{ COMMIT }}</li>
+        <li>Commit Date: {{ COMMIT_DATE }}</li>
       {% endif %}
     </ul>
   </div>
