Tweak footer and fix search box width.

--- a/apps/templates/_home/_footer_content.html
+++ b/apps/templates/_home/_footer_content.html
@@ -5,6 +5,6 @@
 
   </a>
 </div>
-<div class="footer-bottom uk-margin-top uk-text-center">
+<div class="footer-bottom uk-margin-top uk-text-center uk-text-lead">
   Engage with digitized print materials on an open source software platform and share new thinking.
 </div>
