vary navigation item size to match hierarchy in about pages

--- a/apps/static/css/readux2/static.scss
+++ b/apps/static/css/readux2/static.scss
@@ -63,3 +63,16 @@
 .content li:last-of-type {
   margin-bottom: 0;
 }
+
+.indent-h1 a {
+  font-size: 1.5rem;
+}
+.indent-h2 a {
+  font-size: 1.25rem;
+}
+.indent-h3 a {
+  font-size: 1.0rem;
+}
+.indent-h4 a {
+  font-size: 0.85rem;
+}
