--- a/apps/templates/cms/content_page.html
+++ b/apps/templates/cms/content_page.html
@@ -52,7 +52,7 @@
             <nav class="navigation">
                 <ul class="uk-nav uk-nav-default">
                     {% for block in page.body|get_headers %}
-                        <li><a href="#{{ block.id }}" data-section="{{ block.id }}">{{ block|striptags }}</a></li>
+                        <li class="indent-{{block.value.size}}"><a href="#{{ block.id }}" data-section="{{ block.id }}">{{ block|striptags }}</a></li>
                     {% endfor %}
                 </ul>
             </nav>
