add indentation to the side navigation

--- a/apps/static/css/readux2/static.scss
+++ b/apps/static/css/readux2/static.scss
@@ -72,7 +72,9 @@
 }
 .indent-h3 a {
   font-size: 1.0rem;
+  margin-left: 1.5rem;
 }
 .indent-h4 a {
   font-size: 0.85rem;
+  margin-left: 2.5rem;
 }
