adjust main navbar's position attribute (can revert as needed)

--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -64,7 +64,7 @@ main {
 }
 
 .content-page {
-    margin-top: 80px
+    // margin-top: 80px
 }
 
 .paragraph {
@@ -604,7 +604,7 @@ iframe {
 
 .uk-navbar-container {
     z-index: 10;
-    position: fixed;
+    position: absolute;
     width: 100%;
 }
 
