tweak uneven paddings and heights

--- a/apps/static/css/readux2/main.scss
+++ b/apps/static/css/readux2/main.scss
@@ -613,7 +613,7 @@ iframe {
     background-color: #457B9D;
     color: white;
     padding: 20px;
-    min-height: 20vh;
+    // min-height: 20vh;
 }
 
 .footer-content {
