--- a/apps/static/css/readux2/search.scss
+++ b/apps/static/css/readux2/search.scss
@@ -113,7 +113,7 @@ form#search-form input[type="search"][name="q"] {
   height: 150px;
   width: 100%;
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 .uk-button-primary {
@@ -148,7 +148,7 @@ form#search-form input[type="search"][name="q"] {
   height: 150px;
   width: 100%;
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: auto;
 }
 
 /* Selectize */
